<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Clipboard Blacklist</string>
    <string name="action_settings">Settings</string>
    <string name="action_add">Add</string>
    <string name="action_view_log">View Log</string>
    <string name="action_on">ON</string>
    <string name="action_off">OFF</string>
    <string name="action_delete">Delete</string>
    <string name="action_edit">Edit</string>
    <string name="prompt_add_item">Please add the contents that you never want to see in clipboard here.</string>
    <string name="action_sel_all">Select All</string>
    <string name="dialog_prompt">Please input the clipboard blacklist content:</string>
    <string name="dialog_item_enabled_prompt">Prevent the content be copied into clipboard</string>
    <string name="new_item_from_clipboard">using the current clipboard content and CLEAR clipboard</string>
    <string name="new_item_from_clipboard_remain">using the current clipboard content but remain it</string>
    <string name="new_item_input">inputing content manually</string>
    <string name="new_item_prompt">Add a new item into blacklist by</string>
    <string name="no_clip">Clipboard is empty.</string>
    <string name="coerce_to_text_type">Input CoerceToText content</string>
    <string name="detail_type">Input ClipData content by detail</string>
    <string name="clip_text">Text</string>
    <string name="clip_text_hint">Plain Text Clipboard Content</string>
    <string name="clip_html">HTML</string>
    <string name="clip_html_hint">HTML Clipboard Content</string>
    <string name="clip_uri">URI</string>
    <string name="clip_uri_hint">URI Clipboard Content</string>
    <string name="clip_intent">Intent</string>
    <string name="clip_intent_hint">Text form of intent clipboard content</string>
    <string name="err_empty">The content is empty.</string>
    <string name="err_invalid_uri">Invalid Uri text form.</string>
    <string name="err_invalid_intent">Invalid Intent text form.</string>
    <string name="err_no_detail_content">Please check at least one.</string>
    <string name="clip_data_text_prompt_short">T</string>
    <string name="clip_data_html_prompt_short">H</string>
    <string name="clip_data_url_prompt_short">U</string>
    <string name="clip_data_intent_prompt_short">I</string>
    <string name="clip_data_coerce_prompt">Coerce To Text</string>
    <string name="clip_data_details_prompt">ClipData Details</string>
    <string name="log_time_format">MMM dd,\nyyyy\nHH:mm:ss</string>
    <string name="title_logrecord_list">Log Records</string>
    <string name="title_logrecord_detail">Log Record Detail</string>
    <string name="log_detail_time_format">yyyy-MM-dd HH:mm:ss.SSS (Z/zzzz)</string>
    <string name="log_detail_item_prompt">Trigger Item</string>
    <string name="log_detail_item_coerce_true">Coerce To Text</string>
    <string name="log_detail_item_coerce_false">ClipData Detail</string>
    <string name="clip_data_text_prompt">Text</string>
    <string name="clip_data_html_prompt">HTML</string>
    <string name="clip_data_uri_prompt">URI</string>
    <string name="clip_data_intent_prompt">Intent</string>
    <string name="log_detail_clip_prompt">Blocked Clip Item</string>
    <string name="empty_log">No activity log</string>
    <string name="clip_detail_description">Description</string>
    <string name="clip_detail_mime">MIME Types</string>
    <string name="action_delete_log">Delete old log&#8230;</string>
    <string name="delete_date_before">Delete log records before (not include):</string>
    <string name="delete_result">%d log record(s) deleted.</string>
    <string name="settings_block_notice_on">Display message when block clipboard.</string>
    <string name="settings_block_notice_off">Keep silence when blocking clipboard.</string>
    <string name="settings_key_notice">pref.key.block_notice</string>
    <string name="settings_block_notice_title">Block Notice</string>
    <string name="settings_block_notice_message_prefix">ClipData [</string>
    <string name="settings_block_notice_message_suffix">] had been blocked!</string>
</resources>
