<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android" >

    <item
        android:id="@+id/action_on"
        android:orderInCategory="100"
        android:showAsAction="ifRoom"
        android:title="@string/action_on">
    </item>
    <item
        android:id="@+id/action_off"
        android:orderInCategory="200"
        android:showAsAction="ifRoom"
        android:title="@string/action_off">
    </item>
    <item
        android:id="@+id/action_edit"
        android:icon="@drawable/ic_action_edit"
        android:orderInCategory="30"
        android:showAsAction="ifRoom"
        android:title="@string/action_edit">
    </item>
    <item
        android:id="@+id/action_delete"
        android:icon="@drawable/ic_action_discard"
        android:orderInCategory="90"
        android:showAsAction="ifRoom"
        android:title="@string/action_delete">
    </item>
    <item android:id="@+id/action_sel_all" android:orderInCategory="95" android:showAsAction="ifRoom" android:title="@string/action_sel_all" android:icon="@drawable/ic_action_select_all"></item>

</menu>